<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_signal" tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/alarmImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/btn_sonner_air_trait_blanc"/>

    <TextView
        android:id="@+id/nearOrFarTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarmImage"
        android:layout_centerHorizontal="true"
        android:text="@string/contentSignalFar"
        android:textSize="18sp"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/btn_fermer_page_info"/>

    <ImageView
        android:id="@+id/bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/picto_user_detect_bluetooth"/>

    <View
        android:id="@+id/circles"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_white" />
    <View
        android:id="@+id/circlem"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_white" />
    <View
        android:id="@+id/circlel"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:background="@drawable/circle_white"/>
    <View
        android:id="@+id/circlexl"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/circle_white"/>

    <TextView
        android:id="@+id/nearOrFarBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circlexl"
        android:layout_centerHorizontal="true"
        android:text="@string/contentSignalFarBottom"
        android:textSize="30sp"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/batteryImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/picto_batt_moyen"/>

    <TextView
        android:id="@+id/batteryState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/batteryImage"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/contentSignalBatteryExcellent"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/beepingConnecte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/contentSignal2"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="8dp"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/clesMaison"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/beepingConnecte"
        android:layout_marginLeft="8dp"
        android:text="@string/contentSignal1"
        android:textSize="30sp"
        android:textAlignment="center" />

</RelativeLayout>
