<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/visuel_fond_log"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="1"
    tools:context="com.bp_android.prium.beeping_android.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#ffffff"
                android:drawableLeft="@drawable/picto_mail"
                android:drawablePadding="5dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@+id/password"
            android:background="#EBEBEB" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:drawableLeft="@drawable/picto_cadena"
                android:drawablePadding="5dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_rectangle_sky"
        android:text="Sign In"
        android:textColor="#ffffff"
        android:textStyle="normal" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <!-- text1 automatically linkifies things like URLs and phone numbers. -->
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/textForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_sign_in_button"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:gravity="center"
        android:onClick="serve"
        android:text="Fogot password"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="#ffffff"
        android:textStyle="bold|normal" />

    <View
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff" />

    <Button
        android:id="@+id/button_sign_up"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_rectangle_black"
        android:text="Register"
        android:textColor="#ffffff"
        android:textStyle="normal" />


</LinearLayout>
